Fix /vendas issues
